NIFI-12102 - Deprecation warnings when instantiating primitive types